--- a/src/main/resources/com/onriderentals/view/CustomerDashboard.fxml
+++ b/src/main/resources/com/onriderentals/view/CustomerDashboard.fxml
@@ -10,43 +10,49 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.onriderentals.controller.CustomerDashboardController">
-   <children>
-      <VBox spacing="10" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20">
-         <Label text="Available Vehicles" style="-fx-font-size: 24px;"/>
-         <HBox spacing="10">
-            <TextField fx:id="searchField" promptText="Search by make, model, or type" HBox.hgrow="ALWAYS"/>
-            <Button text="Search" onAction="#searchVehicles"/>
-         </HBox>
-         <TableView fx:id="vehicleTable" prefHeight="250">
-            <columns>
-               <TableColumn fx:id="makeColumn" text="Make"/>
-               <TableColumn fx:id="modelColumn" text="Model"/>
-               <TableColumn fx:id="yearColumn" text="Year"/>
-               <TableColumn fx:id="typeColumn" text="Type"/>
-               <TableColumn fx:id="rateColumn" text="Rental Rate"/>
-                <TableColumn fx:id="detailsColumn" text="Details"/>
-            </columns>
-         </TableView>
-         <HBox spacing="10" alignment="CENTER_LEFT">
-            <Label text="Start Date:"/>
-            <DatePicker fx:id="startDatePicker"/>
-            <Label text="End Date:"/>
-            <DatePicker fx:id="endDatePicker"/>
-            <Button text="Book Now" onAction="#bookVehicle"/>
-         </HBox>
-         
-         <Label text="My Bookings" style="-fx-font-size: 24px; margin-top: 20px;"/>
-         <TableView fx:id="bookingTable" prefHeight="250">
-            <columns>
-                <TableColumn fx:id="bookingMakeColumn" text="Make"/>
-                <TableColumn fx:id="bookingModelColumn" text="Model"/>
-                <TableColumn fx:id="bookingStartDateColumn" text="Start Date"/>
-                <TableColumn fx:id="bookingEndDateColumn" text="End Date"/>
-                <TableColumn fx:id="bookingCostColumn" text="Total Cost"/>
-                <TableColumn fx:id="bookingStatusColumn" text="Status"/>
-            </columns>
-         </TableView>
-      </VBox>
-   </children>
-</AnchorPane>
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.onriderentals.controller.CustomerDashboardController" styleClass="root" stylesheets="@styles.css">
+    
+    <fx:include source="Navbar.fxml"/>
+    
+    <AnchorPane VBox.vgrow="ALWAYS">
+       <children>
+          <VBox spacing="10" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20">
+             <Label text="Available Vehicles" styleClass="label-subtitle"/>
+             <HBox spacing="10">
+                <TextField fx:id="searchField" promptText="Search by make, model, or type" HBox.hgrow="ALWAYS"/>
+                <Button text="Search" onAction="#searchVehicles" styleClass="button-primary"/>
+             </HBox>
+             <TableView fx:id="vehicleTable" prefHeight="250">
+                <columns>
+                   <TableColumn fx:id="makeColumn" text="Make"/>
+                   <TableColumn fx:id="modelColumn" text="Model"/>
+                   <TableColumn fx:id="yearColumn" text="Year"/>
+                   <TableColumn fx:id="typeColumn" text="Type"/>
+                   <TableColumn fx:id="rateColumn" text="Rental Rate"/>
+                    <TableColumn fx:id="detailsColumn" text="Details"/>
+                </columns>
+             </TableView>
+             <HBox spacing="10" alignment="CENTER_LEFT">
+                <Label text="Start Date:" styleClass="label"/>
+                <DatePicker fx:id="startDatePicker"/>
+                <Label text="End Date:" styleClass="label"/>
+                <DatePicker fx:id="endDatePicker"/>
+                <Button text="Book Now" onAction="#bookVehicle" styleClass="button-primary"/>
+             </HBox>
+             
+             <Label text="My Bookings" styleClass="label-subtitle" style="-fx-padding: 20 0 0 0;"/>
+             <TableView fx:id="bookingTable" prefHeight="250">
+                <columns>
+                    <TableColumn fx:id="bookingMakeColumn" text="Make"/>
+                    <TableColumn fx:id="bookingModelColumn" text="Model"/>
+                    <TableColumn fx:id="bookingStartDateColumn" text="Start Date"/>
+                    <TableColumn fx:id="bookingEndDateColumn" text="End Date"/>
+                    <TableColumn fx:id="bookingCostColumn" text="Total Cost"/>
+                    <TableColumn fx:id="bookingStatusColumn" text="Status"/>
+                </columns>
+             </TableView>
+          </VBox>
+       </children>
+    </AnchorPane>
+</VBox>
+
