--- a/src/main/resources/com/onriderentals/view/RenterDashboard.fxml
+++ b/src/main/resources/com/onriderentals/view/RenterDashboard.fxml
@@ -9,68 +9,75 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.onriderentals.controller.RenterDashboardController">
-   <children>
-      <VBox spacing="10" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20">
-         <Label style="-fx-font-size: 24px;" text="My Vehicles" />
-         <TableView fx:id="vehicleTable" prefHeight="300">
-            <columns>
-               <TableColumn fx:id="makeColumn" text="Make" />
-               <TableColumn fx:id="modelColumn" text="Model" />
-               <TableColumn fx:id="yearColumn" text="Year" />
-               <TableColumn fx:id="typeColumn" text="Type" />
-               <TableColumn fx:id="licensePlateColumn" text="License Plate" />
-                <TableColumn fx:id="rentalRateColumn" text="Rental Rate" />
-               <TableColumn fx:id="statusColumn" text="Status" />
-            </columns>
-         </TableView>
-         
-         <Label style="-fx-font-size: 24px; margin-top: 20px;" text="Add/Edit Vehicle" />
-          <GridPane hgap="10" vgap="5">
-              <columnConstraints>
-                  <ColumnConstraints minWidth="100"/>
-                  <ColumnConstraints hgrow="ALWAYS"/>
-              </columnConstraints>
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.onriderentals.controller.RenterDashboardController" styleClass="root" stylesheets="@styles.css">
 
-              <Label text="Make:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-              <TextField fx:id="makeField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+    <fx:include source="Navbar.fxml"/>
+    
+    <AnchorPane VBox.vgrow="ALWAYS">
+       <children>
+          <VBox spacing="10" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20">
+             <Label styleClass="label-subtitle" text="My Vehicles" />
+             <TableView fx:id="vehicleTable" prefHeight="300">
+                <columns>
+                   <TableColumn fx:id="makeColumn" text="Make" />
+                   <TableColumn fx:id="modelColumn" text="Model" />
+                   <TableColumn fx:id="yearColumn" text="Year" />
+                   <TableColumn fx:id="typeColumn" text="Type" />
+                   <TableColumn fx:id="licensePlateColumn" text="License Plate" />
+                    <TableColumn fx:id="pricePerDayColumn" text="Rental Rate" />
+                   <TableColumn fx:id="statusColumn" text="Status" />
+                </columns>
+             </TableView>
+             
+             <Label styleClass="label-subtitle" style="-fx-padding: 20 0 0 0;" text="Add/Edit Vehicle" />
+              <GridPane hgap="10" vgap="5">
+                  <columnConstraints>
+                      <ColumnConstraints minWidth="100"/>
+                      <ColumnConstraints hgrow="ALWAYS"/>
+                  </columnConstraints>
+    
+                  <Label text="Make:" GridPane.rowIndex="0" GridPane.columnIndex="0" styleClass="label"/>
+                  <TextField fx:id="makeField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+    
+                  <Label text="Model:" GridPane.rowIndex="1" GridPane.columnIndex="0" styleClass="label"/>
+                  <TextField fx:id="modelField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+    
+                  <Label text="Year:" GridPane.rowIndex="2" GridPane.columnIndex="0" styleClass="label"/>
+                  <TextField fx:id="yearField" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                  
+                  <Label text="Color:" GridPane.rowIndex="3" GridPane.columnIndex="0" styleClass="label"/>
+                  <TextField fx:id="colorField" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+                  
+                  <Label text="License Plate:" GridPane.rowIndex="4" GridPane.columnIndex="0" styleClass="label"/>
+                  <TextField fx:id="licensePlateField" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+                  
+                  <Label text="VIN:" GridPane.rowIndex="5" GridPane.columnIndex="0" styleClass="label"/>
+                  <TextField fx:id="vinField" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+    
+                  <Label text="Type:" GridPane.rowIndex="6" GridPane.columnIndex="0" styleClass="label"/>
+                  <TextField fx:id="typeField" GridPane.rowIndex="6" GridPane.columnIndex="1" promptText="e.g., BIKE, CAR"/>
+    
+                  <Label text="Mileage:" GridPane.rowIndex="7" GridPane.columnIndex="0" styleClass="label"/>
+                  <TextField fx:id="mileageField" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+                  
+                  <Label text="Rental Rate:" GridPane.rowIndex="8" GridPane.columnIndex="0" styleClass="label"/>
+                  <TextField fx:id="pricePerDayField" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
+    
+              </GridPane>
+    
+              <HBox spacing="10" style="-fx-padding: 10 0 0 0;">
+                  <Button onAction="#addVehicle" text="Add Vehicle" styleClass="button-primary"/>
+                  <Button onAction="#updateVehicle" text="Update Vehicle" styleClass="button-secondary"/>
+                  <Button onAction="#deleteVehicle" text="Delete Vehicle" styleClass="button-outline"/>
+                  <Button onAction="#clearForm" text="Clear" styleClass="button-ghost"/>
+              </HBox>
+    
+          </VBox>
+       </children>
+    </AnchorPane>
+</VBox>
 
-              <Label text="Model:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-              <TextField fx:id="modelField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
-              <Label text="Year:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-              <TextField fx:id="yearField" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-              
-              <Label text="Color:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-              <TextField fx:id="colorField" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
-              
-              <Label text="License Plate:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-              <TextField fx:id="licensePlateField" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
-              
-              <Label text="VIN:" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
-              <TextField fx:id="vinField" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
 
-              <Label text="Type:" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
-              <TextField fx:id="typeField" GridPane.rowIndex="6" GridPane.columnIndex="1" promptText="e.g., BIKE, CAR"/>
-
-              <Label text="Mileage:" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
-              <TextField fx:id="mileageField" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
-              
-              <Label text="Rental Rate:" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
-              <TextField fx:id="rentalRateField" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
-
-          </GridPane>
-
-          <HBox spacing="10" style="-fx-padding: 10 0 0 0;">
-              <Button onAction="#addVehicle" text="Add Vehicle"/>
-              <Button onAction="#updateVehicle" text="Update Vehicle"/>
-              <Button onAction="#deleteVehicle" text="Delete Vehicle"/>
-              <Button onAction="#clearForm" text="Clear"/>
-          </HBox>
-
-      </VBox>
-   </children>
-</AnchorPane>
