--- a/src/main/resources/com/onriderentals/view/Register.fxml
+++ b/src/main/resources/com/onriderentals/view/Register.fxml
@@ -9,24 +9,34 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.onriderentals.controller.RegisterController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
+<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.onriderentals.controller.RegisterController" styleClass="root" stylesheets="@styles.css">
+    
+    <fx:include source="Navbar.fxml"/>
+    
+    <VBox alignment="CENTER" spacing="20.0" VBox.vgrow="ALWAYS">
+        <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+        </padding>
 
-    <Label text="Register">
-        <font>
-            <Font name="System Bold" size="24.0" />
-        </font>
-    </Label>
+        <Label text="Register" styleClass="label-title">
+            <font>
+                <Font name="System Bold" size="24.0" />
+            </font>
+        </Label>
+        
+        <VBox maxWidth="300" spacing="10" styleClass="card" style="-fx-padding: 30;">
+            <TextField fx:id="usernameField" promptText="Full Name" />
+            <TextField fx:id="emailField" promptText="Email" />
+            <PasswordField fx:id="passwordField" promptText="Password" />
+            
+            <Label text="I want to:" styleClass="label" />
+            <ChoiceBox fx:id="userTypeChoiceBox" maxWidth="Infinity" />
 
-    <TextField fx:id="usernameField" promptText="Name" />
-    <TextField fx:id="emailField" promptText="Email" />
-    <PasswordField fx:id="passwordField" promptText="Password" />
-
-    <ChoiceBox fx:id="userTypeChoiceBox" />
-
-    <Button fx:id="registerButton" onAction="#register" text="Register" />
-    <Button fx:id="backToLoginButton" onAction="#backToLogin" text="Back to Login" />
-
+            <Button fx:id="registerButton" onAction="#register" text="Register" maxWidth="Infinity" styleClass="button-primary"/>
+            <Button fx:id="backToLoginButton" onAction="#backToLogin" text="Back to Login" maxWidth="Infinity" styleClass="button-ghost"/>
+        </VBox>
+        
+    </VBox>
 </VBox>
+
+
